--- a/intro.html
+++ b/intro.html
@@ -212,14 +212,15 @@
                         <div class="title">
                             <h1>&#129505Gửi em!</h1>
                         </div>
-                        <p>Năm mới, anh chỉ chúc em được nhiều sức khỏe thôi.
-                             Còn về hạnh phúc và niềm vui, anh mong rằng chính 
-                             mình sẽ là người mang những điều đó đến với em. Yêu 
-                             em nhiều! Năm mới đến rồi, một năm qua thật đặc biệt 
-                             với anh và cả em nữa. Năm mới đến đồng nghĩa với việc 
-                             anh lại được nối dài năm tháng yêu thương chăm sóc em. 
-                             Anh chúc em tràn đầy hạnh phúc ngọt ngào hãy gìn giữ và 
-                             nuôi dưỡng tình yêu của chúng mình em nhé.
+                        <p>Năm mới, chúc em nhều sức khỏe. Có thể một số chuyện
+                            trong năm cũ không được như ý nguyện nhưng hãy cứ
+                            vui tươi và tràn đầy hạnh phúc. Chúc mọi thứ tốt đẹp
+                            sẽ đến với em.
+                            Và cuối cùng, Thay mặt Đảng, Nhà nước, Chính phủ, Quốc hội,
+                            Mặt trận Tổ quốc, các cơ quan đoàn thể, anh em bạn bè gần xa,
+                            bà con lối xóm tao chúc em và gia đình năm mới an khang thịnh vượng,
+                            vạn sự như ý, còn em sớm có người thương.
+
                         </p>
                         <div class="fixedContent">
                             <h3>Người gửi: Anh Thế Lê</h3>
